BUG FIX: no-label float in first name (login panel)

--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -309,7 +309,7 @@
                                     type="text"
                                     on-focus='onUserFirstNameFocus'
                                     on-blur='onUserFirstNameFocusOut'
-                                    n-label-float
+                                    no-label-float
                                     required
                                     max-length=15
                                     invalid='{{!isFirstNameValid(firstName, firstNameInFocus)}}'
