--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -15,6 +15,8 @@
 <link rel='import' href='../../dialog/aq-delete-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-input-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-compare-dialog.html'>
+<script src="../../../resources/scripts/DateTime.js"></script>
+
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
 <dom-module id="aq-editor-home">
@@ -261,7 +263,8 @@
                                 strategy-name="[[item.name]]"
                                 num-backtest="[[item.backtests]]"
                                 strategy-desc="[[item.description]]"
-                                strategy-id="[[item._id]]">
+                                strategy-id="[[item._id]]"
+                                created-at="[[formatDateTime(item.createdAt)]]">
                         </aq-editor-home-strategy-item>
                     </template>
                 </div>
@@ -372,6 +375,7 @@
                 if (this.create == 1) {
                     this.fire('newClicked');
                 }
+
             },
 
             computPostDeleteStrategyUrl: function (deleteId) {
@@ -689,7 +693,9 @@
 
             },
 
-
+            formatDateTime: function(d) {
+                return date.formatDateTime(d);
+            },
 
         });
     </script>
